# PureDown

./: .gitignore  index.html  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml
apps/puredown/: README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/puredown/scripts/: smoke-duckduckgo.mjs
apps/puredown/src/: App.tsx  index.css  vite-env.d.ts
apps/puredown/src-tauri/: Cargo.toml  tauri.conf.json
apps/puredown/src-tauri/capabilities/: default.json
apps/puredown/src-tauri/icons/: icon.icns
apps/puredown/src-tauri/src/: lib.rs  main.rs
apps/puredown/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  tabs.tsx
apps/puredown/src/features/search/: api.ts  query.test.ts  query.ts  types.ts  web-duckduckgo.ts
assets/: index-CwDkd4OU.css  index-gjkp4xDN.js
