[package]
name = "puredown"
version = "0.0.0"
description = "PureDown 高清图搜索器"
authors = [ "PureDown" ]
edition = "2021"

[lib]
name = "puredown_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
open = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls"
] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
url = "2"
